--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -1,22 +1,72 @@
-.itemContainer {
+/* .itemContainer {
     background-color: #560097;
     display: flex !important;
     align-items: center !important;
     flex-direction: row !important;
     justify-content: space-evenly !important;
     height: 4rem;
-}
+} */
 
-.itemColor{
+/* .itemColor{
     color: white;
 }
 .itemColor:hover{
     color: #9e52d5;
-    /* font-family: "fantasy"; */
+     font-family: "fantasy";
 
-}
+} */
 
 .nav-item-color{
-    color: rgba(245, 222, 179, 0.562) !important;
+    color: #fc9739 !important;
 }
 
+
+/* ////////////////////////////////////////////////////////////////// */
+
+
+.navbar {
+    /* background-color: white; */
+    padding: 10px 20px;
+  }
+  
+  .nav-links {
+    display: flex;
+    gap: 20px;
+  }
+  
+  .nav-link {
+    color: #999;
+    font-size: 1.2rem;
+    font-weight: 400;
+    text-transform: uppercase;
+    text-decoration: none;
+  }
+  
+  .nav-link:hover {
+    color: #555;
+  }
+  
+  .logo-container {
+    display: flex;
+    align-items: center;
+  }
+  
+  .city-logo {
+    width: 200px;
+    height: 200px;
+    margin-right: 10px;
+  }
+  
+  .brand-text {
+    font-size: 18px;
+    color: #333;
+  }
+  
+  .brand-city {
+    color: #00114b;
+    font-weight: bold;
+  }
+  
+  .brand-property {
+    color: #666;
+  }
