--- a/src/css/ContactForm.css
+++ b/src/css/ContactForm.css
@@ -11,6 +11,7 @@
     padding: 20px;
     /* background-color: #fff3e5; */
     border-radius: 10px;
+    text-align: justify;
   }
   
   .contact-info h2 {
