--- a/src/css/About_Us.css
+++ b/src/css/About_Us.css
@@ -14,8 +14,9 @@ body {
     padding: 20px;
     margin-bottom: 20px;
     line-height: 1.6;
+    text-align: justify;
   }
-  
+   
   .container p {
     font-size: 1.5em;
     color: #2c3e50;
@@ -30,6 +31,16 @@ body {
     color: #555;
     margin-bottom: 10px;
   }
+
+  ul {
+    list-style-type: disc;
+    padding-left: 20px; /* Añade margen a la izquierda */
+  }
+  
+  ul li {
+    margin-bottom: 10px; /* Espacio entre cada elemento de la lista */
+  }
+  
   
   /* Mejorar el diseño para pantallas pequeñas */
   @media (max-width: 600px) {
