--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -1,72 +1,86 @@
-/* .itemContainer {
-    background-color: #560097;
-    display: flex !important;
-    align-items: center !important;
-    flex-direction: row !important;
-    justify-content: space-evenly !important;
-    height: 4rem;
-} */
-
-/* .itemColor{
-    color: white;
-}
-.itemColor:hover{
-    color: #9e52d5;
-     font-family: "fantasy";
-
-} */
-
 .nav-item-color{
     color: #fc9739 !important;
 }
 
-
-/* ////////////////////////////////////////////////////////////////// */
-
-
 .navbar {
-    /* background-color: white; */
     padding: 10px 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
   
-  .nav-links {
+.nav-links {
     display: flex;
     gap: 20px;
-  }
+}
   
-  .nav-link {
+.nav-link {
     color: #999;
     font-size: 1.2rem;
     font-weight: 400;
     text-transform: uppercase;
     text-decoration: none;
-  }
+}
   
-  .nav-link:hover {
+.nav-link:hover {
     color: #555;
-  }
+}
   
-  .logo-container {
+.logo-container {
     display: flex;
     align-items: center;
-  }
+}
   
-  .city-logo {
+.city-logo {
     width: 200px;
     height: 200px;
     margin-right: 10px;
-  }
+}
   
-  .brand-text {
+.brand-text {
     font-size: 18px;
     color: #333;
-  }
+}
   
-  .brand-city {
+.brand-city {
     color: #00114b;
     font-weight: bold;
-  }
+}
   
-  .brand-property {
+.brand-property {
     color: #666;
+}
+
+/* Estilos para dispositivos móviles */
+@media (max-width: 768px) {
+  .navbar {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
+
+  .logo-container {
+    order: -1; /* Mover el logo a la parte superior */
+    margin-bottom: 10px; /* Espacio entre el logo y los enlaces */
+  }
+
+  .nav-links {
+    flex-direction: row;
+    align-items: center;
+    gap: 15px;
+    margin-top: -2rem;
+  }
+
+  .city-logo {
+    width: 250px; /* Ajustar el tamaño del logo para pantallas móviles */
+    height: 250px;
+  }
+}
+
+@media (max-width: 425px) {
+    .nav-links {
+        flex-direction: column;
+      }
+
+
+}
