--- a/src/css/ContactForm.css
+++ b/src/css/ContactForm.css
@@ -131,3 +131,12 @@
     }
   }
   
+
+  .toast-center {
+    top: 50% !important; 
+    left: 50% !important;
+    transform: translate(-50%, -50%) !important;
+    position: fixed !important;
+    z-index: 9999 !important;
+  }
+  
