--- a/src/css/About_Us.css
+++ b/src/css/About_Us.css
@@ -1,6 +1,6 @@
 /* EmpresaInfo.css */
 body {
-    font-family: 'Arial', sans-serif;
+    /* font-family: 'Arial', sans-serif; */
     background-color: #f4f4f9;
     margin: 0;
     padding: 20px;
