--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -79,8 +79,33 @@
 
 @media (max-width: 425px) {
     .nav-links {
-        flex-direction: column;
+        flex-direction: row;
       }
+      .nav-link{
+        font-size: 1rem;
+      }
+
+
+}
+
+@media (max-width: 375px) {
+  .nav-links {
+      flex-direction: row;
+    }
+    .nav-link{
+      font-size: 0.9rem;
+    }
+
+
+}
+
+@media (max-width: 320px) {
+  .nav-links {
+      flex-direction: column;
+    }
+    .nav-link{
+      font-size: 0.9rem;
+    }
 
 
 }
