--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,4 +1,4 @@
-.containerApp{
-    padding-right: 2rem;
-    padding-left: 2rem;
-}
+
+ body{
+    font-family: "Roboto", sans-serif !important;
+ }
