--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -2,6 +2,18 @@
     color: #fc9739 !important;
 }
 
+a {
+  
+  all: unset; /* Borra todos los estilos predeterminados */
+  cursor: pointer;
+
+}
+
+a:hover{
+  color: #fc9739 !important;
+
+}
+
 .navbar {
     padding: 10px 20px;
     display: flex;
@@ -22,9 +34,9 @@
     text-decoration: none;
 }
   
-.nav-link:hover {
+/* .nav-link:hover {
     color: #555;
-}
+} */
   
 .logo-container {
     display: flex;
