--- a/src/css/About_Us.css
+++ b/src/css/About_Us.css
@@ -13,6 +13,7 @@ body {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     padding: 20px;
     margin-bottom: 20px;
+    margin-top: 20px;
     line-height: 1.6;
     text-align: justify;
   }
