--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -2,11 +2,17 @@
     color: #fc9739 !important;
 }
 
+.nav-container{
+  background: white;
+  height: 10rem;
+}
+
 .navbar {
     padding: 10px 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    border-radius: 10px;
   }
   
 .nav-links {
@@ -16,7 +22,7 @@
   
 .nav-link {
     color: #999;
-    font-size: 1.2rem;
+    font-size: 0.8rem;
     font-weight: 400;
     text-transform: uppercase;
     text-decoration: none;
@@ -32,10 +38,13 @@
 }
   
 .city-logo {
-    width: 200px;
-    height: 200px;
-    margin-right: 10px;
+  width: 11rem;
+  height: 10rem;
+  margin-right: 10px;
+  margin-top: 1rem;
+
 }
+
   
 .brand-text {
     font-size: 18px;
@@ -57,6 +66,11 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    /* margin-top: -80px; */
+  }
+
+  .nav-container{
+    height: 15rem;
   }
 
   .logo-container {
@@ -72,8 +86,9 @@
   }
 
   .city-logo {
-    width: 250px; /* Ajustar el tamaño del logo para pantallas móviles */
-    height: 250px;
+    width: 11rem;
+    height: 10rem;
+    margin-top: 0px;
   }
 }
 
@@ -82,7 +97,7 @@
         flex-direction: row;
       }
       .nav-link{
-        font-size: 1rem;
+        font-size: 0.8rem;
       }
 
 
@@ -93,7 +108,7 @@
       flex-direction: row;
     }
     .nav-link{
-      font-size: 0.9rem;
+      font-size: 0.8rem;
     }
 
 
@@ -101,10 +116,10 @@
 
 @media (max-width: 320px) {
   .nav-links {
-      flex-direction: column;
+      flex-direction: row;
     }
     .nav-link{
-      font-size: 0.9rem;
+      font-size: 0.7rem;
     }
 
 
